res/RulesV1.0.ebnf
S = File;
File =;
File = FunctionDeclaration, File;

FunctionDeclaration = "func", id, "(", ")", CodeBlock;
FunctionDeclaration = "func", id, "(", ")", "->", "(", ")", CodeBlock;
FunctionDeclaration = "func", id, "(", ")", "->", Type, CodeBlock;
FunctionDeclaration = "func", id, "(", ")", "->", "(", Type, ")", CodeBlock;
FunctionDeclaration = "func", id, "(", ParamList, ")", CodeBlock;
FunctionDeclaration = "func", id, "(", ParamList, ")", "->", "(", ")", CodeBlock;
FunctionDeclaration = "func", id, "(", ParamList, ")", "->", Type, CodeBlock;
FunctionDeclaration = "func", id, "(", ParamList, ")", "->", "(", Type, ")", CodeBlock;

ParamList = id, ":", Type;
ParamList = id, ":", Type, ParamList;

Type = id;
Type = "*", Type;
Type = "[", "]", Type;
Type = "[", int, "]", Type;

CodeBlock = "{", StatementList, "}";

StatementList =;
StatementList = Statement, StatementList;

Statement = ";";
Statement = Expression, ";";
Statement = Declaration, ";";
Statement = "return", ";";
Statement = "return", Expression, ";";
Statement = CodeBlock;
Statement = IfBlock;
Statement = Loop;

Loop = "while", "(", Expression, ")", CodeBlock;

IfBlock = "if", "(", Expression, ")", CodeBlock;
IfBlock = "if", "(", Expression, ")", CodeBlock, "else", IfBlock;
IfBlock = "if", "(", Expression, ")", CodeBlock, "else", CodeBlock;

Declaration = id, ":", Type, "=", Expression;

Expression = AssignmentExpression;

AssignmentExpression = EqualityExpression, "=", AssignmentExpression;
AssignmentExpression = EqualityExpression;

EqualityExpression = RelationalExpression, EqualityTail;

EqualityTail = ;
EqualityTail = ("==" | "!="), RelationalExpression, EqualityTail;

RelationalExpression = AdditiveExpression, RelationalTail;

RelationalTail = ;
RelationalTail = ("<" | ">" | "<=" | ">="), AdditiveExpression, RelationalTail;

AdditiveExpression = MultiplicativeExpression, AdditiveTail;

AdditiveTail = ;
AdditiveTail = ("+" | "-"), MultiplicativeExpression, AdditiveTail;

MultiplicativeExpression = UnaryExpression, MultiplicativeTail;

MultiplicativeTail = ;
MultiplicativeTail = ("*" | "/"), UnaryExpression, MultiplicativeTail;

UnaryExpression = Operator, UnaryExpression;
UnaryExpression = PostfixExpression;

PostfixExpression = PrimaryExpression, PostfixTail;

PostfixTail = ;
PostfixTail = "(", ExpressionList, ")", PostfixTail;
PostfixTail = "[", Expression, "]", PostfixTail;

PrimaryExpression = id;
PrimaryExpression = Literal;
PrimaryExpression = "(", Expression, ")";
PrimaryExpression = "new", Type, "(", ExpressionList, ")";
PrimaryExpression "[", "]", Type, "{", ExpressionList, "}";
PrimaryExpression "[", int, "]", Type, "{", ExpressionList, "}";

ExpressionList = ;
ExpressionList = Expression, ExpressionListTail;

ExpressionListTail = ;
ExpressionListTail = ",", Expression, ExpressionListTail;

FunctionCall = Expression, "(", ExpressionList, ")";
